# x2struct

./: CMakeLists.txt
lib/jsoncpp/: json  main  myjson
src/: json2struct.cpp
